product-composite-service: implements api