@@ -6,14 +6,16 @@ import com.safecornerscoffee.microservices.api.core.recommendation.Recommendatio
 import com.safecornerscoffee.microservices.api.core.review.Review;
 import com.safecornerscoffee.microservices.util.exception.NotFoundException;
 import com.safecornerscoffee.microservices.util.http.ServiceUtil;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 public class DefaultProductCompositeService implements ProductCompositeService {
 
+    private static final Logger LOG = LoggerFactory.getLogger(DefaultProductCompositeService.class);
     private final ServiceUtil serviceUtil;
     private final ProductCompositeIntegration integration;
 
@@ -23,7 +25,39 @@ public class DefaultProductCompositeService implements ProductCompositeService {
     }
 
     @Override
-    public ProductAggregate getProduct(int productId) {
+    public void createCompositeProduct(ProductAggregate body) {
+        try {
+            LOG.debug("createCompositeProduct: creates a new composite entity for productId: {}", body.getProductId());
+
+            Product product = new Product(body.getProductId(), body.getName(), body.getWeight(), null);
+            integration.createProduct(product);
+
+            if (body.getRecommendations() != null) {
+                body.getRecommendations().forEach(r -> {
+                    Recommendation recommendation = new Recommendation(body.getProductId(), r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent(), null);
+                    integration.createRecommendation(recommendation);
+                });
+            }
+
+            if (body.getReviews() != null) {
+                body.getReviews().forEach(r -> {
+                    Review review = new Review(body.getProductId(), r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent(), null);
+                    integration.createReview(review);
+                });
+            }
+
+            LOG.debug("createCompositeProduct: composite entites created for productId: {}", body.getProductId());
+
+        } catch (RuntimeException re) {
+            LOG.warn("createCompositeProduct failed", re);
+            throw re;
+        }
+    }
+
+    @Override
+    public ProductAggregate getCompositeProduct(int productId) {
+
+        LOG.debug("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
 
         Product product = integration.getProduct(productId);
         if (product == null) throw new NotFoundException("No product found for productId:" + productId);
@@ -32,7 +66,23 @@ public class DefaultProductCompositeService implements ProductCompositeService {
 
         List<Review> reviews = integration.getReviews(productId);
 
+        LOG.debug("getCompositeProduct: aggregate entity found for productId: {}", productId);
+
         return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
+    }
+
+    @Override
+    public void deleteCompositeProduct(int productId) {
+
+        LOG.debug("deleteCompositeProduct: Deletes a product aggregate for productId: {}", productId);
+
+        integration.deleteProduct(productId);
+
+        integration.deleteRecommendations(productId);
+
+        integration.deleteReviews(productId);
+
+        LOG.debug("getCompositeProduct: aggregate entities deleted for productId: {}", productId);
     }
 
     private ProductAggregate createProductAggregate(Product product, List<Recommendation> recommendations, List<Review> reviews, String serviceAddress) {
@@ -41,13 +91,14 @@ public class DefaultProductCompositeService implements ProductCompositeService {
         String name = product.getName();
         int weight = product.getWeight();
 
-        List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null : recommendations.stream()
-                .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate()))
-                .collect(Collectors.toList());
+        List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null :
+                recommendations.stream()
+                .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
+                .toList();
 
         List<ReviewSummary> reviewSummaries = (reviews == null) ? null : reviews.stream()
-                .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject()))
-                .collect(Collectors.toList());
+                .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
+                .toList();
 
         String productAddress = product.getServiceAddress();
         String reviewAddress = (reviews != null && reviews.size() > 0) ? reviews.get(0).getServiceAddress() : "";
